Word wrap fix

--- a/_src/assets/styles/components/article.scss
+++ b/_src/assets/styles/components/article.scss
@@ -1,4 +1,6 @@
 .article {
+  word-wrap: break-word;
+
   h1,
   h2,
   h3,
